--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - var_lib_mysql:/var/lib/mysql
 
   slurmdbd:
-    image: slurm-docker-cluster:19.05.1
+    image: hpc:latest
     command: ["slurmdbd"]
     container_name: slurmdbd
     hostname: slurmdbd
@@ -28,7 +28,7 @@ services:
       - mysql
 
   slurmctld:
-    image: slurm-docker-cluster:19.05.1
+    image: hpc:latest
     command: ["slurmctld"]
     container_name: slurmctld
     hostname: slurmctld
@@ -43,7 +43,7 @@ services:
       - "slurmdbd"
 
   c1:
-    image: slurm-docker-cluster:19.05.1
+    image: hpc:latest
     command: ["slurmd"]
     hostname: c1
     container_name: c1
@@ -52,13 +52,14 @@ services:
       - etc_slurm:/etc/slurm
       - slurm_jobdir:/data
       - var_log_slurm:/var/log/slurm
+      - /Users/akhilteja/hpc_clone:/hpc_clone
     expose:
       - "6818"
     depends_on:
       - "slurmctld"
 
   c2:
-    image: slurm-docker-cluster:19.05.1
+    image: hpc:latest
     command: ["slurmd"]
     hostname: c2
     container_name: c2
@@ -67,6 +68,7 @@ services:
       - etc_slurm:/etc/slurm
       - slurm_jobdir:/data
       - var_log_slurm:/var/log/slurm
+      - /Users/akhilteja/hpc_clone:/hpc_clone
     expose:
       - "6818"
     depends_on:
@@ -78,3 +80,6 @@ volumes:
   slurm_jobdir:
   var_lib_mysql:
   var_log_slurm:
+
+# volumes:
+#     - /Users/akhilteja/hpc_clone:/hpc_clone
